charts/deployment/deployment.yml

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: labelstudio
  namespace: label-studio
  labels:
    app: labelstudio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labelstudio
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: labelstudio
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: data-storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: labelstudio-pv-claim
      containers:
      - name: labelstudio
        # Pulls the default Minio image from Docker Hub
        image: heartexlabs/label-studio:latest
        ports:
          - name: server
            containerPort: 8080
        #Mount the volume into the pod
        volumeMounts:
          - name: data-storage # must match the volume name, above
            mountPath: "/label-studio"

---
apiVersion: v1
kind: Service
metadata:
  name: labelstudio-service
  namespace: label-studio
spec:
  ports:
    - port: 3200
      targetPort: 8080
  selector:
    app: labelstudio
